--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     
     <ul>
       <li>Conducted daily appointments meeting with home owners across Northern California to discuss the benefits of various home renovation projects such as solar panels, back up power generators, and new roofs.  </li>
-      <li>Maintained relationships with customers and various financial instutions in order to follow up and ensure optimal customer service.</li>
+      <li>Maintained relationships with customers and various financial institutions in order to follow up and ensure optimal customer service.</li>
       <li>Negotiated on final price of projects while matching customers with the financial institutions offering them the best financing option. I would help the customer with the signing and financing process and follow up till the process was complete.</li>
     </ul>
     <div>
