--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div>
       <h1> Alan Rodriguez Lopez</h1>
-       <p>Highly motivated, competent, bilingual, professional eager to enter the tech field and looking to be  a strong addition to a team.
+       <p>Highly motivated, competent, bilingual, professional individual eager to enter the tech field and looking to be  a strong addition to a team.
       </div>
   
         <div class="exp-header">
