--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div>
       <h1> Alan Rodriguez Lopez</h1>
+      <h2> (808) 824-2780 Arodlopez11@gmail.com</h2>
        <p>Highly motivated, competent, bilingual, professional individual eager to enter the tech field and looking to be  a strong addition to a team.
       </div>
   
