--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <ul>
       <li>Performed duties as a member of a team to provide consistent and high results in a Garrison Environment as well as during training.  </li>
       <li>My duty during missions was to repeatedly scan the area for indicators or disturbances in the landscape in order to identify areas of danger or enemies.</li>
-      <li>Attended various different schools offered by the Army in order to further expand my knowlege and expertise on my job, such as a Talon robotic class, Combatives,  Anti-Terrorism, and various Pre-Sapper and Pre-<Ranger courses./li>
+      <li>Attended various different schools offered by the Army in order to further expand my knowlege and expertise on my job, such as a Talon robotic class, Combatives,  Anti-Terrorism, and various Pre-Sapper and Pre-Ranger courses./li>
     </ul>
        </div>
   
